--- a/index.html
+++ b/index.html
@@ -1,1 +1,144 @@
 <!-- write code here -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Web-Structure/index-styles.css">
+    <!-- ================ import google font ================-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <!-- ================ import bootstrap icon ================-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="icon" type="image/x-icon" href="./PIC/web-icon.png">
+    <title>Portfolio CodeCamp</title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul class="navbar">
+                <a href="#">
+                    <li>Works</li>
+                </a>
+                <a href="#">
+                    <li>Blog</li>
+                </a>
+                <a href="#">
+                    <li>Contact</li>
+                </a>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <!-- ================ Section-1 ================-->
+        <section class="sec1-con">
+            <div>
+                <h1>Hi, I am John,</h1>
+                <h1>Creative Technologist</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis
+                    enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <a href="#">Download Resume</a>
+            </div>
+            <div>
+                <div class="avatar-pic"></div>
+            </div>
+        </section>
+
+        <!-- ================ Section-2 ================-->
+        <section class="sec2-con">
+            <div>
+                <p>Recent posts</p>
+                <a href="#">View all</a>
+            </div>
+            <div>
+                <div class="card-1">
+                    <h2>Making a design system from scratch</h2>
+                    <div>
+                        <p>12 Feb 2020</p>
+                        <p>Design, Pattern</p>
+                    </div>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                    </p>
+                </div>
+
+                <div class="card-2">
+                    <h2>Creating pixel perfect icons in Figma</h2>
+                    <div>
+                        <p>12 Feb 2020</p>
+                        <p>Figma, Icon Design</p>
+                    </div>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- ================ Section-3 ================-->
+        <section class="sec3-con">
+            <div>
+                <p>Featured works</p>
+            </div>
+            <div>
+                <div class="s3-card1">
+                    <div class="s3-pic1"></div>
+                    <div>
+                        <h2>Designing Dashboards</h2>
+                        <div>
+                            <a href="#" class="s3-year">2020</a>
+                            <p>Dashboard</p>
+                        </div>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="s3-card2">
+                    <div class="s3-pic2"></div>
+                    <div>
+                        <h2>Vibrant Portraits of 2020</h2>
+                        <div>
+                            <a href="#" class="s3-year">2018</a>
+                            <p>Illustration</p>
+                        </div>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="s3-card3">
+                    <div class="s3-pic3"></div>
+                    <div>
+                        <h2>36 Days of Malayalam type</h2>
+                        <div>
+                            <a href="#" class="s3-year">2018</a>
+                            <p>Typography</p>
+                        </div>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                </div>
+                <hr>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <a href="#"><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-twitter-x"></i></a>
+            <a href="#"><i class="bi bi-linkedin"></i></a>
+        </div>
+        <p>Copyright ©2020 All rights reserved. Online CodeCamp#18 Watcharaphol Dangpiem</p>
+    </footer>
+</body>
+
+</html>
